# Search-and-Rescue_Robot_Dog_Unitree_Go1

./: CMakeLists.txt  README.md
go1_description/xacro/: robot.xacro
ros2_unitree_legged_interfaces/: CMakeLists.txt  package.xml
ros2_unitree_legged_msgs/: CMakeLists.txt
ros2_unitree_legged_msgs/msg/: HighCmd.msg
unitree_exploration/: package.xml  setup.cfg  setup.py
unitree_exploration/unitree_exploration/: frontier_explorer.py
unitree_kinematics/: CMakeLists.txt  README.md
unitree_kinematics/include/unitree_kinematics/: geometry2d.hpp  kinematic_state.hpp  se2d.hpp  svg.hpp
unitree_kinematics/src/: frame_main.cpp  geometry2d.cpp  kinematic_state.cpp  se2d.cpp  svg.cpp
unitree_kinematics/tests/: test_geometry2d.cpp  test_se2d.cpp  test_svg.cpp
unitree_legged_real/: CMakeLists.txt  package.xml
unitree_legged_real/config/: cmd_only.rviz  state_and_cmd.rviz  state_only.rviz  unitree_exploration.rviz  unitree_zed_nav.rviz  zed_unitree.rviz
unitree_legged_real/include/: convert.h
unitree_legged_real/launch/: high.launch.py  low.launch.py  unitree_exploration.launch.py  unitree_nav_zed.launch.py  unitree_zed.launch.py  visualize.launch.py
unitree_legged_real/src/: costmap_publisher.cpp  custom_gait.cpp  jsp_high.cpp  jsp_low.cpp  occupancy_grid_publisher.cpp  ros2_position_example.cpp  ros2_test.cpp  ros2_udp.cpp  ros2_walk_example.cpp  ros2_walk_experiments.cpp  udp_high.cpp  udp_low.cpp  unitree_waypoint.cpp
unitree_legged_real/unitree_legged_sdk-master/include/unitree_legged_sdk/: comm.h  unitree_legged_sdk.h
